--- a/MiniShop/MiniShop.csproj
+++ b/MiniShop/MiniShop.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{528178A2-A5EC-46E9-A11E-956EF87A385D}</ProjectGuid>
+    <ProjectGuid>{13FC7DCD-FD56-4689-A4D5-9EF1D2085C03}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Dziedziczenie</RootNamespace>
-    <AssemblyName>Dziedziczenie</AssemblyName>
+    <RootNamespace>MiniShop</RootNamespace>
+    <AssemblyName>MiniShop</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,28 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Figury\Figura.cs" />
-    <Compile Include="Figury\IFigura.cs" />
-    <Compile Include="Figury\IFiguraStat.cs" />
-    <Compile Include="Figury\Kwadrat.cs" />
-    <Compile Include="Figury\Okrag.cs" />
-    <Compile Include="Figury\Prostokat.cs" />
-    <Compile Include="Figury\Trojkat.cs" />
-    <Compile Include="KlasaAbstrakcyjna\AbstractProduct.cs" />
-    <Compile Include="KlasaAbstrakcyjna\Product.cs" />
-    <Compile Include="KlasaStatyczna\Utils.cs" />
-    <Compile Include="MetodyWirtualne\Animal.cs" />
-    <Compile Include="Pojazdy\IPojazd.cs" />
-    <Compile Include="Pojazdy\Pojazd.cs" />
-    <Compile Include="Pojazdy\Samochod.cs" />
-    <Compile Include="Pojazdy\SamochodElektryczny.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderItem.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Przeciazanie\Wektor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
